# NC_Streaming_data_project

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: cicd.yml
src/: lambda_function.py  lambda_handler.py  local_invoke.py
terraform/: lambda.tf  provider.tf  sqs.tf  vars.tf
test/: test_lambda_handler.py  test_local_invoke.py
