[project]
name = "nc-streaming-data-project"
version = "0.1.0"
description = "Guardian API data streaming tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.34",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "moto>=5.1.3",
    "pip-audit>=2.9.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.4",
]
